fix(email): Make email verification POST request
