# docs/swagger.yaml
@@ -292,6 +292,11 @@ definitions:
       lastname:
         type: string
     type: object
+  handler.VerifyEmailRequest:
+    properties:
+      token:
+        type: string
+    type: object
   sync.PullResponse:
     properties:
       records:
@@ -1509,16 +1514,17 @@ paths:
       tags:
       - Authentication
   /auth/verify:
-    get:
+    post:
       consumes:
       - application/json
       description: Verify user email using the token sent via email
       parameters:
-      - description: Verification token
-        in: query
-        name: token
+      - description: Validation Token
+        in: body
+        name: request
         required: true
-        type: string
+        schema:
+          $ref: '#/definitions/handler.VerifyEmailRequest'
       produces:
       - application/json
       responses:
